--- a/_config.yml
+++ b/_config.yml
@@ -25,5 +25,5 @@ paginate_path: "/blog/page:num/"
 markdown: kramdown
 
 # Outputting
-permalink: /blog/:title.html
+permalink: /blog/:year/:month/:day/:title.html
 
