--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,13 @@ github_username:  FishJar
 timezone: Asia/Shanghai
 
 gems: [jekyll-paginate]
-paginate: 20
-paginate_path: "/blog/page:num/"
+paginate: 10
+paginate_path: "/blog/page/:num/"
 
 # Build settings
 markdown: kramdown
 
 # Outputting
-permalink: /blog/:year/:month/:day/:title.html
+# permalink: /blog/:year/:month/:day/:title.html
+permalink: /blog/:year-:month/:title.html
 
