--- a/_config.yml
+++ b/_config.yml
@@ -26,5 +26,5 @@ markdown: kramdown
 
 # Outputting
 # permalink: /blog/:year/:month/:day/:title.html
-permalink: /blog/:year-:month/:title.html
+permalink: /blog/:year/:month/:title.html
 
